fixed align issue

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -139,7 +139,7 @@ nav{
     }
 }
 
-.title{
+.card-title{
     display: flex;
     flex-direction: row;
     gap: .5em;
